--- a/src/app/components/users/users-list/users-list.component.html
+++ b/src/app/components/users/users-list/users-list.component.html
@@ -1,1 +1,47 @@
-<p>users-list works!</p>
+<main id="main">
+  <div class="titulo">
+    <h1>Lista de Usuarios</h1>
+  </div>
+  <div class="container-fluid mt-5">
+    <div class="d-flex justify-content mx-3">
+      <button type="button" class="btn btn-primary btn-lg mb-3">
+        <i class="bi bi-person-plus-fill"></i> Cadastrar Cliente
+      </button>
+    </div>
+    <div class="row">
+      <div class="span5">
+        <table class="table table-striped table-condensed">
+          <thead>
+            <tr>
+              <th>Nome</th>
+              <th>Endereco</th>
+              <th>Telefone</th>
+              <th>Status</th>
+              <th></th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Donna R. Folse</td>
+              <td>Bairro: Campo Grande, Rua: Rua Vítor Alves, Numero:1393</td>
+              <td>2012/05/06</td>
+              <td>ativo</td>
+              <td><button type="button" class="btn btn-primary ">Atualizar</button></td>
+              <td><button type="button" class="btn btn-danger ">Remover</button></td>
+            </tr>
+            <tr>
+              <td>Donna R. Folse</td>
+              <td>Bairro: Campo Grande, Rua: Rua Vítor Alves, Numero:1393</td>
+              <td>2012/05/06</td>
+              <td>ativo</td>
+              <td><button type="button" class="btn btn-primary ">Atualizar</button></td>
+              <td><button type="button" class="btn btn-danger ">Remover</button></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</main>
+
